--- a/portal-consulting/src/mapa-del-sitio/inicio.html
+++ b/portal-consulting/src/mapa-del-sitio/inicio.html
@@ -3,43 +3,144 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio - Portal Consultoría</title>
+    <title>Portal - Agencia de Diseño Web y Marketing Digital</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Bienvenido a Portal Consultoría</h1>
-        <nav>
-            <ul>
-                <li><a href="inicio.html">Inicio</a></li>
-                <li><a href="porque-elegir-portal.html">Porqué elegir Portal?</a></li>
-                <li><a href="servicios.html">Servicios</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="clientes.html">Clientes</a></li>
-                <li><a href="opiniones-cliente.html">Opiniones de cliente</a></li>
-                <li><a href="preguntas-frecuentes.html">Preguntas frecuentes</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <div class="header-inner container">
+            <a class="logo" href="inicio.html">
+                <img src="../assets/logo.png" alt="Portal logo" />
+                <span>Portal</span>
+            </a>
+            <nav>
+                <a href="inicio.html" aria-current="page">Inicio</a>
+                <a href="porque-elegir-portal.html">¿Por qué Portal?</a>
+                <a href="servicios.html">Servicios</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="clientes.html">Clientes</a>
+                <a href="opiniones-cliente.html">Opiniones</a>
+                <a href="preguntas-frecuentes.html">FAQ</a>
+                <a href="contacto.html" class="btn btn--primary">Contacto</a>
+            </nav>
+        </div>
     </header>
+
     <main>
-        <section>
-            <h2>¿Quiénes somos?</h2>
-            <p>En Portal, ofrecemos soluciones de consultoría personalizadas para ayudar a tu negocio a crecer y prosperar. Nuestro equipo de expertos está listo para brindarte el apoyo que necesitas.</p>
+        <!-- Hero Section -->
+        <section class="hero-main container fade-up">
+            <div class="hero-content">
+                <span class="kicker">Agencia Digital</span>
+                <h1>Potenciamos tu presencia digital con diseño web y marketing</h1>
+                <p>Desarrollamos sitios web profesionales, optimizados para SEO y enfocados en convertir visitantes en clientes.</p>
+                <div class="cta-row">
+                    <a href="servicios.html" class="btn btn--primary">Explorar servicios</a>
+                    <a href="portfolio.html" class="btn btn--ghost">Ver portfolio</a>
+                </div>
+            </div>
+            <div class="hero-image zoom-in">
+                <img src="../assets/hero-illustration.svg" alt="Diseño web profesional">
+            </div>
         </section>
-        <section>
-            <h2>Nuestros Servicios</h2>
-            <p>Descubre cómo podemos ayudarte a alcanzar tus objetivos a través de nuestros servicios especializados.</p>
-            <a href="servicios.html">Ver Servicios</a>
+
+        <!-- Services Grid -->
+        <section class="container">
+            <h2 class="section-title">Nuestros Servicios</h2>
+            <div class="services-grid">
+                <div class="card fade-up">
+                    <div class="card-icon">
+                        <img src="../assets/icons/web.svg" alt="Diseño web">
+                    </div>
+                    <h3>Diseño Web</h3>
+                    <p>Sitios web profesionales y optimizados para resultados</p>
+                    <a href="../servicios/diseno-web.html" class="card-link">Más info →</a>
+                </div>
+
+                <div class="card fade-up">
+                    <div class="card-icon">
+                        <img src="../assets/icons/responsive.svg" alt="Diseño responsive">
+                    </div>
+                    <h3>Diseño Responsive</h3>
+                    <p>Webs adaptadas a todos los dispositivos</p>
+                    <a href="../servicios/web-adaptativas.html" class="card-link">Más info →</a>
+                </div>
+
+                <div class="card fade-up">
+                    <div class="card-icon">
+                        <img src="../assets/icons/cms.svg" alt="CMS">
+                    </div>
+                    <h3>Autoadministrable</h3>
+                    <p>Control total sobre tu contenido</p>
+                    <a href="../servicios/web-autoadministrables.html" class="card-link">Más info →</a>
+                </div>
+            </div>
         </section>
-        <section>
-            <h2>Contáctanos</h2>
-            <p>¿Tienes preguntas? No dudes en <a href="contacto.html">contactarnos</a>.</p>
+
+        <!-- Why Us Section -->
+        <section class="container">
+            <div class="features-grid">
+                <div class="feature-card fade-up">
+                    <h4>Experiencia</h4>
+                    <p>+100 proyectos exitosos</p>
+                </div>
+                <div class="feature-card fade-up">
+                    <h4>Soporte</h4>
+                    <p>Atención personalizada 24/7</p>
+                </div>
+                <div class="feature-card fade-up">
+                    <h4>Tecnología</h4>
+                    <p>Últimas tendencias web</p>
+                </div>
+                <div class="feature-card fade-up">
+                    <h4>Resultados</h4>
+                    <p>Enfoque en conversiones</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- CTA Section -->
+        <section class="cta-section container">
+            <div class="cta-box fade-up">
+                <h2>¿Listo para impulsar tu negocio?</h2>
+                <p>Agenda una consultoría gratuita y analicemos tu proyecto</p>
+                <a href="contacto.html" class="btn btn--primary">Contactar ahora</a>
+            </div>
         </section>
     </main>
+
     <footer>
-        <p>&copy; 2023 Portal Consultoría. Todos los derechos reservados.</p>
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-col">
+                    <h4>Portal</h4>
+                    <p>Soluciones digitales para hacer crecer tu negocio</p>
+                </div>
+                <div class="footer-col">
+                    <h4>Servicios</h4>
+                    <ul>
+                        <li><a href="../servicios/diseno-web.html">Diseño Web</a></li>
+                        <li><a href="../servicios/web-adaptativas.html">Web Responsive</a></li>
+                        <li><a href="../servicios/hosting.html">Hosting</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Soporte</h4>
+                    <ul>
+                        <li><a href="../soporte/soporte-tecnico.html">Soporte Técnico</a></li>
+                        <li><a href="preguntas-frecuentes.html">FAQ</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Contacto</h4>
+                    <a href="contacto.html" class="btn btn--primary">Contactar</a>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 Portal. Todos los derechos reservados.</p>
+            </div>
+        </div>
     </footer>
+
     <script src="../js/main.js"></script>
 </body>
 </html>
