--- a/portal-consulting/src/servicios/actualizacion-web.html
+++ b/portal-consulting/src/servicios/actualizacion-web.html
@@ -24,8 +24,67 @@
             <p>Nos aseguramos de que su sitio web esté siempre alineado con las últimas tendencias y tecnologías.</p>
         </section>
     </main>
-    <footer>
-        <p>&copy; 2023 Portal. Todos los derechos reservados.</p>
+    <footer class="footer-dark">
+        <div class="container">
+            <div class="footer-columns">
+                <!-- Columna 1: Mapa del Sitio -->
+                <div class="footer-col">
+                    <h4>Mapa del Sitio</h4>
+                    <ul>
+                        <li><a href="inicio.html">Inicio</a></li>
+                        <li><a href="porque-elegir-portal.html">¿Por qué elegir Portal?</a></li>
+                        <li><a href="servicios.html">Servicios</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="clientes.html">Clientes</a></li>
+                        <li><a href="novedades.html">Novedades</a></li>
+                        <li><a href="opiniones-cliente.html">Opiniones de Clientes</a></li>
+                        <li><a href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+
+                <!-- Columna 2: Servicios -->
+                <div class="footer-col">
+                    <h4>Servicios</h4>
+                    <ul>
+                        <li><a href="../servicios/diseno-web.html">Diseño de Páginas Web</a></li>
+                        <li><a href="../servicios/web-adaptativas.html">Páginas Web Adaptativas</a></li>
+                        <li><a href="../servicios/web-autoadministrables.html">Páginas Web Autoadministrables</a></li>
+                        <li><a href="../servicios/hosting.html">Hosting</a></li>
+                        <li><a href="../servicios/actualizacion-web.html">Actualización de páginas web</a></li>
+                    </ul>
+                </div>
+
+                <!-- Columna 3: Contáctenos -->
+                <div class="footer-col">
+                    <h4>Contáctenos</h4>
+                    <ul class="contact-info">
+                        <li><a href="tel:+5491155139654">(011) 15-5139-6514</a></li>
+                        <li><a href="tel:+5493585062670">(0358) 15-506-2670</a></li>
+                        <li><a href="mailto:info@portal.com.ar">info@portal.com.ar</a></li>
+                    </ul>
+                    <div class="social-icons">
+                        <a href="#" class="social-icon facebook" aria-label="Facebook"></a>
+                        <a href="#" class="social-icon twitter" aria-label="Twitter"></a>
+                        <a href="#" class="social-icon linkedin" aria-label="LinkedIn"></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer-badges">
+                <img src="../assets/badges/data-fiscal.png" alt="Data Fiscal" class="badge">
+                <div class="certifications">
+                    <img src="../assets/badges/six-sigma.png" alt="Six Sigma Black Belt" class="cert-badge">
+                    <img src="../assets/badges/aida.png" alt="A.I.D.A Marketing Principles" class="cert-badge">
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <p>&copy; 2023 - 2025 • Portal Diseño Web Argentina • Todos los Derechos Reservados</p>
+                <p>TEL: (011) 15-5139-6514 • Buenos Aires • Argentina</p>
+                <img src="../assets/logo-footer.png" alt="Portal" class="footer-logo">
+            </div>
+        </div>
     </footer>
 </body>
 </html>
