--- a/portal-consulting/src/mapa-del-sitio/contacto.html
+++ b/portal-consulting/src/mapa-del-sitio/contacto.html
@@ -8,31 +8,73 @@
 </head>
 <body>
     <header>
-        <h1>Contacto</h1>
+        <div class="header-inner container">
+            <a class="logo" href="inicio.html">
+                <img src="../assets/logo.png" alt="Portal logo">
+                <span>Portal</span>
+            </a>
+            <nav>
+                <a href="inicio.html">Inicio</a>
+                <a href="porque-elegir-portal.html">¿Por qué Portal?</a>
+                <a href="servicios.html">Servicios</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="clientes.html">Clientes</a>
+                <a href="opiniones-cliente.html">Opiniones</a>
+                <a href="preguntas-frecuentes.html">FAQ</a>
+                <a href="contacto.html" class="btn btn--primary" aria-current="page">Contacto</a>
+            </nav>
+        </div>
     </header>
-    <main>
-        <form id="contact-form">
-            <label for="name">Nombre:</label>
-            <input type="text" id="name" name="name" required>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+    <main class="container">
+        <section class="contact-section">
+            <h1>CONSULTÁ AHORA</h1>
+            <p class="contact-intro">
+                Realizanos una consulta o solicitá presupuesto utilizando el siguiente formulario.
+                <br>A la brevedad nos pondremos en contacto.
+            </p>
 
-            <label for="company">Empresa:</label>
-            <input type="text" id="company" name="company">
+            <form id="contact-form" class="contact-form fade-up">
+                <div class="form-group">
+                    <label for="name">
+                        <span class="required">*</span> Nombre
+                    </label>
+                    <input type="text" id="name" name="name" required>
+                </div>
 
-            <label for="phone">Teléfono:</label>
-            <input type="tel" id="phone" name="phone">
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="phone">
+                            <span class="required">*</span> Teléfono
+                        </label>
+                        <input type="tel" id="phone" name="phone" required>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="email">
+                            <span class="required">*</span> Email
+                        </label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
 
-            <label for="message">Mensaje/Problema:</label>
-            <textarea id="message" name="message" required></textarea>
+                    <div class="form-group">
+                        <label for="company">Empresa</label>
+                        <input type="text" id="company" name="company">
+                    </div>
+                </div>
 
-            <label for="attachment">Adjuntar archivos:</label>
-            <input type="file" id="attachment" name="attachment">
+                <div class="form-group">
+                    <label for="message">
+                        <span class="required">*</span> Mensaje
+                    </label>
+                    <textarea id="message" name="message" required></textarea>
+                </div>
 
-            <button type="submit" style="background-color: green; color: white;">Enviar Solicitud</button>
-        </form>
+                <button type="submit" class="btn btn--primary">ENVIAR</button>
+            </form>
+        </section>
     </main>
+
     <footer class="footer-dark">
         <div class="container">
             <div class="footer-columns">
@@ -45,7 +87,6 @@
                         <li><a href="servicios.html">Servicios</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="clientes.html">Clientes</a></li>
-                        <li><a href="novedades.html">Novedades</a></li>
                         <li><a href="opiniones-cliente.html">Opiniones de Clientes</a></li>
                         <li><a href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
