--- a/portal-consulting/src/mapa-del-sitio/inicio.html
+++ b/portal-consulting/src/mapa-del-sitio/inicio.html
@@ -8,19 +8,16 @@
 </head>
 <body>
     <header>
-        <div class="header-inner container">
+        <div class="header-inner container" role="banner">
             <a class="logo" href="inicio.html">
-                <img src="../assets/logo.png" alt="Portal logo" />
+                <img src="portal logo.jpg" alt="Portal logo">
                 <span>Portal</span>
             </a>
-            <nav>
-                <a href="inicio.html" aria-current="page">Inicio</a>
+
+            <nav role="navigation" aria-label="Principal">
+                <a href="inicio.html">Inicio</a>
                 <a href="porque-elegir-portal.html">¿Por qué Portal?</a>
                 <a href="servicios.html">Servicios</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="clientes.html">Clientes</a>
-                <a href="opiniones-cliente.html">Opiniones</a>
-                <a href="preguntas-frecuentes.html">FAQ</a>
                 <a href="contacto.html" class="btn btn--primary">Contacto</a>
             </nav>
         </div>
@@ -121,7 +118,6 @@
                         <li><a href="servicios.html">Servicios</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="clientes.html">Clientes</a></li>
-                        <li><a href="novedades.html">Novedades</a></li>
                         <li><a href="opiniones-cliente.html">Opiniones de Clientes</a></li>
                         <li><a href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
